# QGC_GlobalDrones

./: CMakeLists.txt  init_pipe.py  qgcimages.qrc  qgroundcontrol.pro  qgroundcontrol.qrc  report_generator.py
Controle_Drone_Python/: Controle_drone.py  README.md  lib_controle_drone.py
VideoReceiverApp/: main.cpp
android/: AndroidManifest.xml
src/: CMakeLists.txt  QGCApplication.cc
src/API/: CMakeLists.txt  QGCCorePlugin.cc
src/AnalyzeView/: MAVLinkInspectorPage.qml
src/Audio/: AudioOutput.cc
src/AutoPilotPlugins/PX4/: SafetyComponent.qml
src/Comms/: LogReplayLink.cc  LogReplayLink.h
src/FlightDisplay/: FlyView.qml  FlyViewBottomRightRowLayout.qml  FlyViewVideo.qml  FlyViewVideoSiYiController.qml
src/FlightMap/Widgets/: QGCCompassWidget.qml
src/PlanView/: GeoFenceMapVisuals.qml
src/QmlControls/: PipView.qml
src/QtLocationPlugin/: QGCMapTileSet.cpp
src/Settings/: AppSettings.cc  FlyView.SettingsGroup.json
src/SiYi/: CMakeLists.txt  SiYiCamera.cc  SiYiTransmitter.cc
src/UI/: MainRootWindow.qml
src/UI/preferences/: GeneralSettings.qml
src/UI/toolbar/: BatteryIndicator.qml
src/VideoManager/: VideoManager.cc
src/VideoManager/VideoReceiver/: VideoReceiver.pri
src/VideoManager/VideoReceiver/GStreamer/: GStreamer.cc
